fix: reduce nav height being too large

--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -109,8 +109,6 @@
 
 @media only screen and (min-width: 600px) {
   .header {
-    padding: 20px;
-
     .bar {
       font-size: 15px;
     }
